Fixed white space to the right

--- a/vue-project/src/assets/base.css
+++ b/vue-project/src/assets/base.css
@@ -7,6 +7,7 @@
 body {
   font-family: monospace;
   font-size: 16px;
+  padding-right: 0 !important;
 }
 /* Color variables */
 :root {
